added new changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=ProjectDocker
-
+server.port=8081
+spring.security.user.name=bharadwaj
+spring.security.user.password=123
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/Test
 #spring.datasource.username=root
